--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tiptap/vue-3": "^2.4.0",
         "vue-material-design-icons": "^5.3.0",
         "vue-moment": "^4.1.0",
+        "vue-router": "^4.4.0",
         "vue-trix": "^1.2.0"
     }
 }
